--- a/discoveryservice/build.gradle
+++ b/discoveryservice/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   id 'java'
-  id 'org.springframework.boot' version '3.4.3'
-  id 'io.spring.dependency-management' version '1.1.7'
+  id 'org.springframework.boot' version '3.2.4'
+  id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'com.example'
@@ -18,7 +18,7 @@ repositories {
 }
 
 ext {
-  set('springCloudVersion', "2024.0.0")
+  set('springCloudVersion', "2023.0.0")
 }
 
 dependencies {
@@ -32,6 +32,8 @@ dependencyManagement {
     mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
   }
 }
+
+tasks.register("prepareKotlinBuildScriptModel") {}
 
 tasks.named('test') {
   useJUnitPlatform()
