#1 - 랜덤 포트 적용

--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 9001
+  port: 0 # 랜덤 포트
 
 spring:
   application:
@@ -7,6 +7,8 @@ spring:
 
 
 eureka:
+  instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: true
     fetch-registry: true
