--- a/apigateway-service/src/main/resources/application.yaml
+++ b/apigateway-service/src/main/resources/application.yaml
@@ -11,14 +11,14 @@ eureka:
 spring:
   application:
     name: apigateway-service
-  cloud:
-    gateway:
-      routes:
-        - id: first-service
-          uri: http://localhost:8081
-          predicates:
-            - Path=/first-service/** #http://localhost:8081/first-service/**
-        - id: second-service
-          uri: http://localhost:8082
-          predicates:
-            - Path=/second-service/**
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: first-service
+#          uri: http://localhost:8081
+#          predicates:
+#            - Path=/first-service/** #http://localhost:8081/first-service/**
+#        - id: second-service
+#          uri: http://localhost:8082
+#          predicates:
+#            - Path=/second-service/**
