#2 - Gateway Filter 적용 2
application.yaml 파일에서 filters 적용

--- a/apigateway-service/src/main/resources/application.yaml
+++ b/apigateway-service/src/main/resources/application.yaml
@@ -11,14 +11,20 @@ eureka:
 spring:
   application:
     name: apigateway-service
-#  cloud:
-#    gateway:
-#      routes:
-#        - id: first-service
-#          uri: http://localhost:8081
-#          predicates:
-#            - Path=/first-service/** #http://localhost:8081/first-service/**
-#        - id: second-service
-#          uri: http://localhost:8082
-#          predicates:
-#            - Path=/second-service/**
+  cloud:
+    gateway:
+      routes:
+        - id: first-service
+          uri: http://localhost:8081
+          predicates:
+            - Path=/first-service/** # /first-service/** 이 조건으로 들어오면, http://localhost:8081 를 호출해라 http://localhost:8081/first-service/**
+          filters:
+            - AddRequestHeader=first-request, first-request-header2  # AddRequestHeader = key, value
+            - AddResponseHeader=first-response, first-response-header2  # AddRequestHeader = key, value
+        - id: second-service
+          uri: http://localhost:8082
+          predicates:
+            - Path=/second-service/**
+          filters:
+            - AddRequestHeader=second-request, second-request-header2  # AddRequestHeader = key, value
+            - AddResponseHeader=second-response, second-response-header2  # AddRequestHeader = key, value
