--- a/apigateway-service/src/main/resources/application.yaml
+++ b/apigateway-service/src/main/resources/application.yaml
@@ -19,12 +19,14 @@ spring:
           predicates:
             - Path=/first-service/** # /first-service/** 이 조건으로 들어오면, http://localhost:8081 를 호출해라 http://localhost:8081/first-service/**
           filters:
-            - AddRequestHeader=first-request, first-request-header2  # AddRequestHeader = key, value
-            - AddResponseHeader=first-response, first-response-header2  # AddRequestHeader = key, value
+#            - AddRequestHeader=first-request, first-request-header2  # AddRequestHeader = key, value
+#            - AddResponseHeader=first-response, first-response-header2  # AddRequestHeader = key, value
+            - CustomFilter
         - id: second-service
           uri: http://localhost:8082
           predicates:
             - Path=/second-service/**
           filters:
-            - AddRequestHeader=second-request, second-request-header2  # AddRequestHeader = key, value
-            - AddResponseHeader=second-response, second-response-header2  # AddRequestHeader = key, value
+#            - AddRequestHeader=second-request, second-request-header2  # AddRequestHeader = key, value
+#            - AddResponseHeader=second-response, second-response-header2  # AddRequestHeader = key, value
+            - CustomFilter
