--- a/first-service/src/main/resources/application.yaml
+++ b/first-service/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 0
 
 spring:
   application:
@@ -12,3 +12,6 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://127.0.0.1:8761/eureka
+ # server port를 0으로 하면 instance의 id를 새롭게 부여할수 있는 옵션을 추가해줘야한다.
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
