--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -42,6 +42,15 @@ dependencies {
   //msyql
   runtimeOnly 'com.mysql:mysql-connector-j'
 
+  // validation
+  implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+  // JPA
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+  // Mapper
+  implementation 'org.modelmapper:modelmapper:3.2.1'
+
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
