#4 - Catalog Service 생성

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include 'discoveryservice'
 include 'apigateway-service'
 include 'first-service'
 include 'second-service'
+include 'catalog-service'
